# Noesis

./: .gitignore  README.md  config.example.yaml  daemon.py  docker-compose.yml  init_db.sql  llm_adapter.py  pyproject.toml  setup.sh
browser_extension/: background.js  content.js  manifest.json  popup.html
cli/: main.py
experiments/: B_e2e_strategy.py  B_e2e_strategy_en.py  README.md  ab_comparison.py  ab_comparison_en.py  ab_ollama.py  ablation_baseline.py  ablation_baseline_en.py  batch_chat.py  contradiction_poisoning.py  conversations_20260629_140648.html  conversations_20260629_140648.json  cross_tool.py  demo_see_it_work.py  experiment_runner.py  parse_150_log.py  scale_degradation.py  serve_v2_fixed.py  supersession_fix_validation.py  verify_reports.py
experiments/reports/: ABLATION_BASELINE_REPORT.md  ABLATION_EN_REPORT.md  AB_50Q_EN_REPORT.md  BILINGUAL_AB_REPORT.md  B_E2E_EN_REPORT.md  B_E2E_STRATEGY_REPORT.md  CONSOLIDATED_SCALED_REPORT.md  CONTRADICTION_ROBUSTNESS_REPORT.md  CROSS_TOOL_REPORT.md  EXPERIMENT_REPORT.md  INDEX.md  SCALE_DEGRADATION_REPORT.md  SUPERSESSION_FIX_REPORT.md  UNIFIED_AB_REPORT.md  UNIFIED_AB_REPORT_EN.md
experiments/results/: B_e2e_strategy_20260629_202536.json  B_e2e_strategy_20260629_203033.json  B_e2e_strategy_en_20260630_130707.json  ab_comparison_20260629_145736.json  ab_comparison_en_150_20260630.json  ab_comparison_en_20260629_211107.json  (+20 more)
tests/: conftest.py  test_benchmark.py  test_confidence.py  test_cross_tool.py  test_injection.py  test_latency.py  test_proxy.py  test_retrieval.py  test_two_phase.py  test_wiki.py
(+25 files in other folders)
