[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[project]
name = "noesis"
version = "0.1.0"
description = "Your thinking layer. Yours forever."
requires-python = ">=3.11"
dependencies = [
    "sqlite-vec>=0.1.0",
    "sentence-transformers>=2.7.0",
    "rank-bm25>=0.2.2",
    "anthropic>=0.25.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
mcp = [
    "mcp>=1.0.0",
]

[project.scripts]
noesis = "cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["noesis*", "cli*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
